--- a/testing.env
+++ b/testing.env
@@ -10,6 +10,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=root
 DB_PASS=123456
-DB_NAME=funtory
+DB_NAME=funtory_test
 PROXY_ENABLED=true
 PROXY_URL=socks5://127.0.0.1:2080
