--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,6 +1,8 @@
 FROM golang:1.20.5-alpine
 
 RUN go install github.com/githubnemo/CompileDaemon@latest
+RUN go install github.com/swaggo/swag/cmd/swag@latest
+
 
 ENV APP_HOME /app
 # Set the module cache directory
@@ -9,4 +11,4 @@ ENV GOMODCACHE /go/pkg/mod
 WORKDIR "$APP_HOME"
 
 
-ENTRYPOINT CompileDaemon -build="go build ./cmd/main.go" -command="./main"
+ENTRYPOINT swag init -g ./cmd/main.go && CompileDaemon -build="go build ./cmd/main.go" -command="./main"
