add timeout and qrcode send limit to whatsapp connect handler

--- a/env.example
+++ b/env.example
@@ -13,3 +13,5 @@ DB_PASS=123456
 DB_NAME=funtory
 PROXY_ENABLED=true
 PROXY_URL=socks5://127.0.0.1:2080
+QRCODE_SSE_TIME_OUT=60
+QRCODE_SSE_SEND_LIMIT=5
